# NEDSS-Modernization

./: .dockerignore  .env  .git-blame-ignore-revs  .gitignore  .graphqlconfig  .prettierrc  .project  CODEOWNERS  Dockerfile  README.md  build.gradle  curl.temp  docker-compose.yml  eclipse-formatter.xml  eclipse-java-google-style.xml  lombok.config  package-lock.json  package.json  pull_request_template.md  sample.env  settings.gradle  sonar.gradle
.github/: dependabot.yml  pull_request_template.md
apps/report-execution/: .gitignore  Dockerfile  NBSSR00018.sas  README.md  ReportOutput.csv  demo.jl  notes.md  pyproject.toml  pytest.toml  sample.env  uv.toml
apps/report-execution/app/: __init__.py  main_test.py
apps/report-execution/scripts/: compare_pa01_pdf_csv.py  fake_table_sql.py  load_fake_data.py  replace_table_sql.py  replace_with_fake.py  restore_original_data.py  restore_with_real.py  uniq_line_csvs.py
apps/report-execution/src/: __init__.py  config.py  db_transaction.py  errors.py  execute_report.py  main.py  main_test.py  models.py  utils.py
apps/report-execution/src/libraries/: case_verification_report.py  contact_record.py  hello_world.py  nbs_custom.py  nbs_potntl_dup_inv_sum.py  nbs_sr_02.py  nbs_sr_05.py  nbs_sr_07.py  nbs_sr_08.py  nbs_sr_09.py  nbs_sr_11.py  nbs_sr_12.py  nbs_sr_13.py  nbs_sr_17.py  nbs_sr_18.py  nbs_sr_19.py  nbs_sr_20.py  pa_01.py  pa_02.py  pa_03.py  pa_04.py  pa_05.py  potntl_dup_inv_sum.py  qa_01.py  qa_03.py  qa_04.py  qa_05.py  qa_06.py  qa_07.py  qa_10.py  tb_case_ver.py  tb_summary_count.py  tb_summary_count_date.py
apps/report-execution/src/libraries/custom/: __init__.py
apps/report-execution/src/libraries/support/pa_01/: calculations.py  models.py  queries.py
apps/report-execution/src/libraries/support/pa_02/: constants.py  queries.py
apps/report-execution/src/libraries/support/pa_04/: calculations.py  models.py  queries.py
apps/report-execution/src/libraries/support/pa_05/: calculations.py  models.py  queries.py
apps/report-execution/tests/: conftest.py  db_transaction.py  execute_report.py  fake.sql  main.py  models.py  utils.py
apps/report-execution/tests/fake_sql/: [RDB].[dbo].[D_ORGANIZATION]_2026-06-10_14-13-12-465361.sql  [RDB].[dbo].[D_PROVIDER]_2026-06-01_15-22-48-811708.sql  [RDB].[dbo].[D_PROVIDER]_2026-06-10_12-29-27-837261.sql  [RDB].[dbo].[INVESTIGATION]_2026-06-10_12-29-26-770850.sql  [RDB].[dbo].[LAB_TEST]_2026-06-10_12-29-29-975067.sql  [RDB].[dbo].[MORBIDITY_REPORT]_2026-06-10_12-29-32-099765.sql  [RDB].[dbo].[MORBIDITY_REPORT_EVENT]_2026-06-10_12-29-31-027095.sql  [RDB].[dbo].[STD_HIV_DATAMART]_2026-06-01_15-22-50-966878.sql
apps/report-execution/tests/integration/: config.py  docker-compose-custom-lib.yml  docker-compose.yml  execute_report.py  main.py
apps/report-execution/tests/integration/assets/: custom_library.py
apps/report-execution/tests/integration/libraries/: custom_library.py  nbs_custom.py  nbs_potntl_dup_inv_sum.py  nbs_sr_02.py  nbs_sr_05.py  nbs_sr_07.py  nbs_sr_08.py  nbs_sr_09.py  nbs_sr_11.py  nbs_sr_12.py  nbs_sr_13.py  nbs_sr_17.py  nbs_sr_18.py  nbs_sr_19.py  nbs_sr_20.py  pa_01.py  pa_02.py  pa_03.py  pa_04.py  pa_05.py  potntl_dup_inv_sum.py  qa_01.py  qa_03.py  qa_04.py  qa_05.py  qa_06.py  qa_07.py  qa_10.py  tb_case_ver.py  tb_summary_count.py  tb_summary_count_date.py
(+15264 files in other folders)
