[project]
name = "report-execution"
version = "0.1.0"
description = "A FastAPI server for the management and execution of both standard and custom reports."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]~=0.128",
    "pydantic>=2.12.5,<3.0.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.54.0",
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.15.0,<1.0.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
]

ignore = [
    # Requires documentation for every function parameter
    "D417",
    # Requires documentation for every package/module
    "D104",
    "D100",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = ["."]
