[project]
name = "report-execution"
version = "0.1.0"
description = "A FastAPI server for the management and execution of both standard and custom reports."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]~=0.128",
    "mssql-python>=1.4.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0,<1.0.0",
    "testcontainers>=4.14.1",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
