[project]
name = "report-execution"
version = "0.1.0"
description = "A FastAPI server for the management and execution of both standard and custom reports."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]~=0.128",
    "mssql-python>=1.4.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5,<3.0.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.54.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0,<1.0.0",
    "tablefaker>=1.8.0",
    "testcontainers>=4.14.1",
    "time-machine>=3.2.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-print
    "T20",
    # flake8-fixme
    "FIX",
    # isort
    "I",
    # pydocstyle
    "D",
]

ignore = [
    # Requires documentation for every function parameter
    "D417",
    # Requires documentation for every package/module
    "D104",
    "D100",
    "D105",
    "D107",
    # Requires one line summary for doc string
    "D205",
]

[tool.ruff.lint.extend-per-file-ignores]
# Don't require doc strings on every test
"tests/**/*.py" = ["D102"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = ["."]
